updated client and updated component usage
